--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 	</style>
 	<body>
 		<div class="links">
-			<p><span class="name">dylan</span> / <a href="https://github.com/PolyEdge">github</a> / <a href="https://twitter.com/Dyspore">twitter</a> / <a href="https://instagram.com/syncet">instagram</a> / <span>Dylan#2439</span></p>
+			<p><span class="name">dylan</span> / <a href="https://dyspore.cc">dyspore.cc</a></p>
 		</div>
 	</body>
 </html>
